# axon

./: .axonignore  .gitignore  .tool-versions  ADR-2026-04-17-canonical-project-identity.md  ADR-2026-04-18-project-registry-runtime-authority.md  CLAUDE.md  Dockerfile.build  GEMINI.md  INSTALL_AUDIT.md  README.md  ROADMAP.md  STATE.md  WIRING.md  bench-results-session54-20260523T150001.csv  broken.ex  check_axon.bat  convert_tests.py  convert_tests2.py  convert_tests3.py  devenv.nix  docker-compose.memgraph.yml  docker-compose.postgres.yml  docker-compose.yml  expert_prompt.md  findings.md  fix_bridge_handler_pause.py  fix_graph_writer_batch.py  fix_graph_writer_pause.py  fix_lock.py  fix_lock_scope.py  fix_main.py  fix_main_refactor.py  fix_parsers.py  fix_progress_db.py  fix_purge.py  fix_registry.py  fix_sleep.py  fix_snapshot.py  fix_structs.py  fix_tests_slug.py  (+28 more)
src/axon-core/: Cargo.toml  benchmark.py  build.rs
src/axon-core/docs/vision/: SOLL_EXPORT_2026-03-30_001137.md  SOLL_EXPORT_2026-03-30_001250.md  SOLL_EXPORT_2026-03-30_001343.md  SOLL_EXPORT_2026-03-30_002622.md  SOLL_EXPORT_2026-03-30_011350.md  SOLL_EXPORT_2026-03-30_013534.md  SOLL_EXPORT_2026-03-30_013919.md  SOLL_EXPORT_2026-03-30_014028.md  SOLL_EXPORT_2026-03-30_014110.md  SOLL_EXPORT_2026-03-30_014200.md  SOLL_EXPORT_2026-03-30_014422.md  SOLL_EXPORT_2026-03-30_015617.md  SOLL_EXPORT_2026-03-30_020522.md  SOLL_EXPORT_2026-03-30_020737.md  SOLL_EXPORT_2026-03-30_020818.md  SOLL_EXPORT_2026-03-30_170214.md  SOLL_EXPORT_2026-03-30_171034.md  SOLL_EXPORT_2026-03-30_173729.md  SOLL_EXPORT_2026-03-30_174946.md  SOLL_EXPORT_2026-03-30_182241.md  SOLL_EXPORT_2026-03-30_212309.md
src/axon-core/parsers/: tree-sitter-c.wasm  tree-sitter-css.wasm  tree-sitter-go.wasm  tree-sitter-html.wasm  tree-sitter-java.wasm  tree-sitter-javascript.wasm  tree-sitter-php.wasm  tree-sitter-python.wasm  tree-sitter-ruby.wasm  tree-sitter-rust.wasm  tree-sitter-scheme.wasm  tree-sitter-tsx.wasm  tree-sitter-yaml.wasm
src/axon-core/rules/: elixir.toml  nix.toml  rust.toml  shell.toml  sql.toml  yaml.toml
src/axon-core/src/: bench_pipeline_stages.rs  bench_pipeline_stages_tests.rs  benchmark_store.rs  bridge.rs  code_chunker.rs  config.rs  contract.rs  contract_tests.rs  dashboard_state.rs  duplication_scan.rs  embedder.rs  embedder_tests.rs  embedding_benchmark.rs  embedding_contract.rs  embedding_profile.rs  env_alias.rs  file_ingress_guard.rs  fs_watcher.rs  graph.rs  graph_analytics.rs  graph_bootstrap.rs  graph_ingestion.rs  graph_query.rs  graph_query_tests.rs  hot_status_cache.rs  indexer_health_http.rs  indexing_policy.rs  ingress_buffer.rs  lib.rs  mailbox.rs  main.rs  main_background.rs  main_services.rs  main_telemetry.rs  main_telemetry_beam_alarm_tests.rs  mcp.rs  mcp_http.rs  nli.rs  observed_gpu.rs  optimizer.rs  (+36 more)
src/axon-core/src/contract/: adequacy.rs  binding.rs  certification.rs  expand.rs  seal.rs  store.rs  store_tests.rs
src/axon-core/src/embedder/: batch_lanes.rs  cpu_query_service.rs  cpu_query_service_tests.rs  gpu_backend.rs  gpu_backend_tests.rs  gpu_policy.rs  gpu_preflight.rs  gpu_telemetry.rs  inline_embed.rs  lifecycle.rs  lifecycle_machine.rs  parquet_embedding_store.rs  provider_contract.rs  provider_runtime.rs  tests.rs  vector_executor.rs  vector_finalize.rs  vector_finalize_loop.rs  vector_maintenance_loop.rs  vector_orchestrator.rs  vector_persist_loop.rs  vector_pipeline_3stages.rs  vector_prepare_loop.rs  vector_refill_loop.rs  vector_worker_loop.rs
src/axon-core/src/graph_bootstrap/: tests.rs
src/axon-core/src/graph_ingestion/: async_writer.rs  chunk_content_archiver.rs  file_ingress.rs  graph_projection_queue.rs  parquet_chunk_content_store.rs  rows.rs  sql_helpers.rs  types.rs  vector_runtime.rs  vectorization_queue.rs
src/axon-core/src/ist_snapshot/: algorithms.rs  cache.rs  code_smells.rs  drift_history.rs  loader.rs  mod.rs  notify_listener.rs  snapshot.rs  structural_invariants.rs  view.rs
src/axon-core/src/main_background/: host_pressure.rs  memory_config.rs
src/axon-core/src/mcp/: catalog.rs  dispatch.rs  format.rs  guidance.rs  protocol.rs  revision_docs_listener.rs  runtime_topology_support.rs  soll.rs  tests.rs  tool_contracts.rs  tools_agent_card.rs  tools_context.rs  tools_contract.rs  tools_data_catalog.rs  tools_dx.rs  tools_framework.rs  tools_framework_anomalies.rs  tools_framework_anomaly_heuristics.rs  tools_framework_change_safety.rs  tools_framework_conception.rs  tools_framework_path.rs  tools_framework_rationale.rs  tools_framework_runtime.rs  tools_framework_runtime_contracts.rs  tools_framework_runtime_quiescence.rs  tools_framework_runtime_status.rs  tools_framework_runtime_topology.rs  tools_framework_snapshot.rs  tools_framework_status_guidance.rs  tools_framework_support.rs  tools_framework_surface.rs  tools_framework_validation.rs  tools_friction.rs  tools_governance.rs  tools_help.rs  tools_ist_algorithms.rs  tools_ist_snapshot.rs  tools_lease.rs  tools_mailbox.rs  tools_mailbox_pubsub.rs  (+10 more)
src/axon-core/src/parser/: c.rs  c_sharp.rs  cpp.rs  css.rs  datalog.rs  elixir.rs  fallback.rs  go.rs  html.rs  java.rs  kotlin.rs  lll.rs  markdown.rs  mod.rs  phantom.rs  php.rs  python.rs  ruby.rs  rust.rs  scheme.rs  sql.rs  text.rs  typeql.rs  typescript.rs  wasm_poc.rs  yaml.rs
src/axon-core/src/pipeline/: channels.rs  embedder_gpu.rs  in_flight.rs  indexed_file_cache.rs  metrics.rs  mod.rs  orchestrator.rs  project_resolver.rs  stage_a1.rs  stage_a2.rs  stage_a3.rs  stage_b1.rs  stage_b2.rs  stage_b3.rs  stage_health.rs  types.rs
src/axon-core/src/pipeline_v2/: channels.rs  (+20 more)
src/axon-core/tests/: pg_backend_boot.rs  pg_bulk_writer.rs  pg_bulk_writer_batch.rs  pg_bulk_writer_batch_bench.rs  pg_bulk_writer_bench.rs  pg_bulk_writer_poison_faultinj.rs
src/axon-plugin-duckdb/: Cargo.toml
src/axon-plugin-duckdb/src/: bin_export_soll.rs  bin_ist_query.rs  bin_memgraph_publication.rs  bin_test.rs  lib.rs
src/axon-plugin-postgres/: Cargo.toml
src/axon-plugin-postgres/src/: lib.rs
src/axon-plugin-postgres/tests/: ffi_contract.rs  integration_pg.rs
(+1910 files in other folders)
