[project]
name = "axoniq"
version = "1.0.0"
description = "Graph-powered code intelligence engine — Triple-Pod distributed architecture (Watcher, Parser, HydraDB)."
readme = "README.md"
license = {text = "Proprietary"}
authors = [
    { name = "Didier Stadelmann", email = "didier@stadelmann.dev" }
]
keywords = ["code-intelligence", "knowledge-graph", "mcp", "tree-sitter", "static-analysis", "dead-code", "hydradb", "distributed"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "fastembed>=0.7.0",
    "mcp[server]>=1.2.1",
    "watchfiles>=1.0.0",
    "pathspec>=1.0.4",
    "tree-sitter-elixir>=0.3.4",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-markdown>=0.5.0",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-html>=0.23.0",
    "tree-sitter-css>=0.25.0",
    "pyarrow>=23.0.1",
    "pandas>=3.0.1",
    "msgpack>=1.1.2",
    "pydantic>=2.12.5",
    "loguru>=0.7.3",
]

[project.urls]
Homepage = "https://github.com/harshkedia177/axon"
Repository = "https://github.com/harshkedia177/axon"
Issues = "https://github.com/harshkedia177/axon/issues"

[project.optional-dependencies]
neo4j = ["neo4j>=5.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[project.scripts]
axon = "axon.cli.main:app"

[tool.uv.build-backend]
module-name = "axon"


[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
