[package]
name = "axon-core"
version = "0.8.0"
edition = "2021"
autobins = false

[[bin]]
name = "axon-core"
path = "src/main.rs"

[[bin]]
name = "axon-brain"
path = "src/bin/axon-brain.rs"

[[bin]]
name = "axon-indexer"
path = "src/bin/axon-indexer.rs"

[[bin]]
name = "axonctl"
path = "src/bin/axonctl.rs"

[[bin]]
name = "embedder-bench"
path = "src/bin/embedder-bench.rs"

[dependencies]
tokio = { version = "1.36", features = ["full", "net"] }
walkdir = "2.5"
ignore = "0.4"
notify-debouncer-full = "0.7.0"
tree-sitter = { version = "0.23", features = ["wasm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
anyhow = "1.0"
rayon = "1.8"
yyjson = "0.1.0"
libloading = "0.8.1"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
regex = "1.12.3"
fastembed = { path = "vendor/fastembed-5.12.1" }
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }
tokenizers = "0.22.1"
ndarray = "0.16.1"
once_cell = "1.21.4"
tempfile = "3.8"
wasmtime = "24.0.0"
toml = "0.8"
axum = "0.8.8"
tokio-stream = "0.1.18"
futures-util = "0.3.32"
crossbeam-channel = "0.5.15"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
parking_lot = "0.12.5"
async-trait = "0.1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
libc = "0.2"

# DEC-AXO-073: Parquet side-store for ChunkEmbedding (vector hot-path).
# Writing FLOAT[1024] vectors directly to Parquet bypasses the DuckDB
# column-store INSERT scaling problem (see VAL-AXO-034, VAL-AXO-036).
# Minimal feature flags; ZSTD compression keeps payloads compact.
parquet = { version = "54", default-features = false, features = ["zstd", "arrow"] }
arrow-array = "54"
arrow-schema = "54"

[dev-dependencies]
rand = "0.8"
tempfile = "3.8"
tower = { version = "0.5.3", features = ["util"] }
