[package]
name = "axon-core"
version = "0.8.0"
edition = "2021"
autobins = false

[[bin]]
name = "axon-core"
path = "src/main.rs"

[[bin]]
name = "axon-brain"
path = "src/bin/axon-brain.rs"

[[bin]]
name = "axon-indexer"
path = "src/bin/axon-indexer.rs"

[[bin]]
name = "axonctl"
path = "src/bin/axonctl.rs"

[[bin]]
name = "embedder-bench"
path = "src/bin/embedder-bench.rs"

# REQ-AXO-257: pipeline throughput bench (N producers / bounded channel /
# 1 consumer). Reconstructed after VAL-AXO-050 worktree loss.
[[bin]]
name = "axon-bench-pipeline"
path = "src/bin/axon-bench-pipeline.rs"

# REQ-AXO-259: Bench 1 (graph projection — watcher → parse → chunk).
[[bin]]
name = "axon-bench-graph-projection"
path = "src/bin/axon-bench-graph-projection.rs"

# REQ-AXO-260: Bench 3 (writer — synthetic chunks → DB persist).
[[bin]]
name = "axon-bench-writer"
path = "src/bin/axon-bench-writer.rs"

[dependencies]
tokio = { version = "1.36", features = ["full", "net"] }
walkdir = "2.5"
ignore = "0.4"
notify-debouncer-full = "0.7.0"
tree-sitter = { version = "0.23", features = ["wasm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
anyhow = "1.0"
rayon = "1.8"
yyjson = "0.1.0"
libloading = "0.8.1"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
regex = "1.12.3"
fastembed = { path = "vendor/fastembed-5.12.1" }
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }
tokenizers = "0.22.1"
ndarray = "0.16.1"
once_cell = "1.21.4"
tempfile = "3.8"
wasmtime = "24.0.0"
toml = "0.8"
axum = "0.8.8"
tokio-stream = "0.1.18"
futures-util = "0.3.32"
crossbeam-channel = "0.5.15"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2"
parking_lot = "0.12.5"
async-trait = "0.1"
# REQ-AXO-289 streaming pipeline v2 — IndexedFile in-RAM filter cache
# (CPT-AXO-054). arc-swap for atomic snapshot replacement on bulk reload;
# dashmap for concurrent path → hash lookup on the watcher hot path.
arc-swap = "1.7"
dashmap = "6.1"
# Stable cross-restart content hash for IndexedFile cache (REQ-AXO-289 S3).
# Already in the transitive dep graph (ort, tokenizers); direct dep makes the
# usage explicit. SHA-256 is overkill for change detection but is the most
# portable choice in the Rust ecosystem.
sha2 = "0.10"
rusqlite = { version = "0.39.0", features = ["bundled"] }
libc = "0.2"

# DEC-AXO-073: Parquet side-store for ChunkEmbedding (vector hot-path).
# Writing FLOAT[1024] vectors directly to Parquet bypasses the DuckDB
# column-store INSERT scaling problem (see VAL-AXO-034, VAL-AXO-036).
# Minimal feature flags; ZSTD compression keeps payloads compact.
# NOTE: scheduled for removal in MIL-AXO-015 P4 (vectors -> pgvector).
parquet = { version = "54", default-features = false, features = ["zstd", "arrow"] }
arrow-array = "54"
arrow-schema = "54"

# MIL-AXO-015 P1 (DEC-AXO-075): PostgreSQL backend.
# tokio-postgres + deadpool-postgres preferred over sqlx because Axon's
# query patterns are predominantly dynamic SQL (DDL generators, AGE
# Cypher passthrough, multi-tenant schema namespacing) which doesn't
# benefit from sqlx's compile-time query checking. Avoiding sqlx also
# sidesteps a libsqlite3-sys conflict with the existing rusqlite dep
# used by benchmark_store. JSON/chrono/uuid round-trips supported via
# tokio_postgres types.
tokio-postgres = { version = "0.7", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
deadpool-postgres = "0.14"
postgres-types = { version = "0.2", features = ["derive"] }
# pgvector crate: provides pgvector::Vector type with tokio-postgres
# encode/decode integration. Used by ChunkEmbedding (CPT-AXO-041 HNSW
# index).
pgvector = { version = "0.4", features = ["postgres"] }
# refinery for versioned schema migrations (sqlx-migrate replacement).
refinery = { version = "0.8", features = ["tokio-postgres"] }

[dev-dependencies]
rand = "0.8"
tempfile = "3.8"
tower = { version = "0.5.3", features = ["util"] }
# MIL-AXO-015 P1: ephemeral PG instances for unit/integration tests.
# Bypasses the need for a long-lived devenv-managed PG during cargo test.
testcontainers = { version = "0.23", features = ["blocking"] }
testcontainers-modules = { version = "0.11", features = ["postgres"] }
