[package]
name = "axon-core"
version = "0.8.0"
edition = "2021"
autobins = false

[[bin]]
name = "axon-core"
path = "src/main.rs"

[[bin]]
name = "axon-brain"
path = "src/bin/axon-brain.rs"

[[bin]]
name = "axon-indexer"
path = "src/bin/axon-indexer.rs"

[[bin]]
name = "axonctl"
path = "src/bin/axonctl.rs"

[[bin]]
name = "embedder-bench"
path = "src/bin/embedder-bench.rs"

# REQ-AXO-257: pipeline throughput bench (N producers / bounded channel /
# 1 consumer). Reconstructed after VAL-AXO-050 worktree loss.
[[bin]]
name = "axon-bench-pipeline"
path = "src/bin/axon-bench-pipeline.rs"

# REQ-AXO-289 S6a: end-to-end streaming pipeline v2 bench (A → B full).
[[bin]]
name = "axon-bench-pipeline-v2"
path = "src/bin/axon-bench-pipeline-v2.rs"

# REQ-AXO-259: Bench 1 (graph projection — watcher → parse → chunk).
[[bin]]
name = "axon-bench-graph-projection"
path = "src/bin/axon-bench-graph-projection.rs"

# REQ-AXO-260: Bench 3 (writer — synthetic chunks → DB persist).
[[bin]]
name = "axon-bench-writer"
path = "src/bin/axon-bench-writer.rs"

# REQ-AXO-91485 (MIL-AXO-019 slice 1): cold-load + neighbor traversal bench
# for the in-memory IstGraph snapshot.
[[bin]]
name = "axon-bench-ist-snapshot"
path = "src/bin/axon-bench-ist-snapshot.rs"

# REQ-AXO-91490 (MIL-AXO-019 slice 0bis): tool migration bench harness with
# ~50 questions across 8 CPT-AXO-90007 categories.
[[bin]]
name = "axon-bench-tool-migration"
path = "src/bin/axon-bench-tool-migration.rs"

# REQ-AXO-901902/901903/901906: CPU chunk-spin culprit finder (watchdog names
# the wedged file even when the main thread spins in userspace).
[[bin]]
name = "axon-diag-chunk-spin"
path = "src/bin/axon-diag-chunk-spin.rs"

[features]
default = []
# REQ-AXO-901608 follow-up — opt-in tokio-console support for async runtime
# observability on the bench binary. Requires `RUSTFLAGS="--cfg
# tokio_unstable"` at build time. Build with:
#   RUSTFLAGS="--cfg tokio_unstable" cargo build --release \
#     --features tokio-console --bin axon-bench-pipeline-v2
# Then run `tokio-console` CLI in another shell to connect.
# Not enabled by default to avoid pulling the dep + tokio_unstable on
# production binaries (axon-brain, axon-indexer).
tokio-console = ["dep:console-subscriber"]

[dependencies]
# REQ-AXO-901608 follow-up — `tracing` feature enables tokio's
# instrumentation hooks consumed by console-subscriber. Inert when the
# `tokio-console` feature is off.
tokio = { version = "1.36", features = ["full", "net", "tracing"] }
console-subscriber = { version = "0.4", optional = true }
walkdir = "2.5"
ignore = "0.4"
# REQ-AXO-901893 — Watchman client (Meta's file-watching daemon). Replaces the
# hand-rolled notify/inotify + ingress_buffer + reconciliation-sweep stack with
# clock/cursor-based reconciliation: a `since` query always returns the exact
# cumulative delta OR falls back safe to a full rebuild (`is_fresh_instance`),
# so missed FS events are structurally impossible. See watchman_source.rs.
watchman_client = "0.9"
tree-sitter = { version = "0.23", features = ["wasm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
anyhow = "1.0"
rayon = "1.8"
yyjson = "0.1.0"
libloading = "0.8.1"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
regex = "1.12.3"
fastembed = { path = "vendor/fastembed-5.12.1" }
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }
tokenizers = "0.22.1"
ndarray = "0.16.1"
once_cell = "1.21.4"
tempfile = "3.8"
wasmtime = "24.0.0"
toml = "0.8"
axum = "0.8.8"
tokio-stream = "0.1.18"
futures-util = "0.3.32"
crossbeam-channel = "0.5.15"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"
parking_lot = "0.12.5"
async-trait = "0.1"
# REQ-AXO-289 streaming pipeline v2 — IndexedFile in-RAM filter cache
# (CPT-AXO-054). arc-swap for atomic snapshot replacement on bulk reload;
# dashmap for concurrent path → hash lookup on the watcher hot path.
arc-swap = "1.7"
dashmap = "6.1"
# DEC-AXO-091 / REQ-AXO-322: SOLL in-memory graph snapshot. petgraph
# replaces hand-rolled cycle-detection / descendant BFS in soll_work_plan
# and powers the orphan / validation-without-verifies /
# decision-without-links checks in soll_completeness_snapshot.
petgraph = "0.6"
# Stable cross-restart content hash for IndexedFile cache (REQ-AXO-289 S3).
# Already in the transitive dep graph (ort, tokenizers); direct dep makes the
# usage explicit. SHA-256 is overkill for change detection but is the most
# portable choice in the Rust ecosystem.
sha2 = "0.10"
rusqlite = { version = "0.39.0", features = ["bundled"] }
libc = "0.2"

# DEC-AXO-073: Parquet side-store for ChunkEmbedding (vector hot-path).
# Writing FLOAT[1024] vectors directly to Parquet bypasses the DuckDB
# column-store INSERT scaling problem (see VAL-AXO-034, VAL-AXO-036).
# Minimal feature flags; ZSTD compression keeps payloads compact.
# NOTE: scheduled for removal in MIL-AXO-015 P4 (vectors -> pgvector).
parquet = { version = "54", default-features = false, features = ["zstd", "arrow"] }
arrow-array = "54"
arrow-schema = "54"

# MIL-AXO-015 P1 (DEC-AXO-075): PostgreSQL backend.
# tokio-postgres + deadpool-postgres preferred over sqlx because Axon's
# query patterns are predominantly dynamic SQL (DDL generators, AGE
# Cypher passthrough, multi-tenant schema namespacing) which doesn't
# benefit from sqlx's compile-time query checking. Avoiding sqlx also
# sidesteps a libsqlite3-sys conflict with the existing rusqlite dep
# used by benchmark_store. JSON/chrono/uuid round-trips supported via
# tokio_postgres types.
tokio-postgres = { version = "0.7", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
deadpool-postgres = "0.14"
postgres-types = { version = "0.2", features = ["derive"] }
# pgvector crate: provides pgvector::Vector type with tokio-postgres
# encode/decode integration. Used by ChunkEmbedding (CPT-AXO-041 HNSW
# index).
pgvector = { version = "0.4", features = ["postgres"] }
# refinery for versioned schema migrations (sqlx-migrate replacement).
refinery = { version = "0.8", features = ["tokio-postgres"] }
# REQ-AXO-91581 slice 2 — Mustache logic-less templating for PRT
# (PromptTemplate) bodies per CPT-AXO-90017. Logic-less = no execution
# surface = no prompt-injection vector (arxiv 2601.17549). Cross-language
# parity (Rust/TS/Python) keeps PRT templates portable across consumers.
mustache = "0.9"

[dev-dependencies]
rand = "0.8"
tempfile = "3.8"
tower = { version = "0.5.3", features = ["util"] }
# MIL-AXO-015 P1: ephemeral PG instances for unit/integration tests.
testcontainers = { version = "0.23", features = ["blocking"] }
testcontainers-modules = { version = "0.11", features = ["postgres"] }
