[package]
name = "axon-plugin-duckdb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
duckdb = { version = "1.10501.0", features = ["bundled"] }
serde_json = "1.0"


[[bin]]
name = "bin_test_pgq"
path = "src/bin_test.rs"

[[bin]]
name = "ist-query"
path = "src/bin_ist_query.rs"

[[bin]]
name = "memgraph-publication"
path = "src/bin_memgraph_publication.rs"
