[package]
name = "axon-plugin-duckdb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
duckdb = { version = "1.10501.0", features = ["bundled"] }
serde_json = "1.0"
anyhow = "1.0"


[[bin]]
name = "bin_test_pgq"
path = "src/bin_test.rs"

[[bin]]
name = "ist-query"
path = "src/bin_ist_query.rs"

[[bin]]
name = "memgraph-publication"
path = "src/bin_memgraph_publication.rs"

# MIL-AXO-015 P5 slice 5c: SOLL export tool. Reads a DuckDB soll.db
# read-only and emits a JSON snapshot consumable by axon-core's
# `crate::postgres::seed::load_seed_if_needed`. Operator runs once
# per migration cycle; the binary lives in axon-plugin-duckdb because
# only this crate carries the DuckDB dep, and it gets deleted along
# with the plugin once the migration completes.
[[bin]]
name = "soll-export-seed"
path = "src/bin_export_soll.rs"
