[package]
name = "axon-plugin-postgres"
version = "0.1.0"
edition = "2021"

# MIL-AXO-015 P3 (REQ-AXO-199, DEC-AXO-075):
# PostgreSQL replacement for axon-plugin-duckdb. Mirrors the C-FFI cdylib
# contract so axon-core's existing libloading-based plugin discovery can
# adopt this binary as a drop-in successor (see graph_bootstrap.rs:907).
# The rlib variant additionally enables direct path-dep consumption from
# tests and from future axon-core refactors that retire the FFI boundary.

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Runtime — owned by each PgPluginContext so the plugin operates from
# sync FFI callers (matching the duckdb_* contract).
tokio = { version = "1.36", features = ["rt-multi-thread", "net", "macros"] }
tokio-postgres = { version = "0.7", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
deadpool-postgres = "0.14"
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"

[dev-dependencies]
# Real PostgreSQL containers for integration tests. Default
# `cargo test --lib` runs only sync unit tests; container-backed cases
# carry `#[ignore]` so CI can opt in via `cargo test -- --ignored`.
# AGE+pgvector currently arrive via the `apache/age:PG17_latest` image
# (AGE preinstalled, pgvector exercised by P4).
testcontainers = { version = "0.23", features = ["blocking"] }
tempfile = "3.8"
